--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "we-plugin-editor-summernote",
   "description": "We.js plugin for add summernote html field with editor in project",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "plugin.js",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:wejs/we-plugin-editor-summernote.git"
-  },
+  "repository": "wejs/we-plugin-editor-summernote",
   "keywords": [
-    "we.js",
-    "wejs",
-    "plugin",
-    "editor"
+    "wejs-plugin"
   ],
   "author": "Alberto Souza <contato@albertosouza.net>",
-  "license": "MIT"
+  "license": "MIT",
+  "wejs": {
+    "dependencies": {
+      "we-plugin-view": true,
+      "we-plugin-form": true
+    }
+  }
 }
